2004/06/28 00:27 (-0400) muppetman

	* GValue.xs: handle undef gracefully in gperl_value_from_sv(); let
	the GValue default.

2004/06/28 00:17 (-0400) muppetman

	* GObject.xs, GType.xs, t/f.t: add new semantics for Glib::Object
	properties.  when no GET_PROPERTY or SET_PROPERTY is defined, fall
	back to using the key in the wrapper hash with the same name as the
	property; also allow creation of properties with explicit getter and
	setter functions, which override [SG]ET_PROPERTY and the fallback.
	discussion of the ideas here is archived in the mailing list:
	http://mail.gnome.org/archives/gtk-perl-list/2004-June/msg00091.html

2004/06/21 22:15 (-0400) muppetman

	* Glib.xs: fine-tune gperl_format_variable_for_output(); don't
	truncate references, and disambiguate undef.

2004/06/08 21:55 (-0400) muppetman

	* AUTHORS, GLog.xs, GObject.xs, GParamSpec.xs, GType.xs, Glib.xs:
	patch from Albert Chin keeps us honest in ANSI/C89 compatibility,
	to allow compilation on IRIX.  C++ comments are not allowed in C
	files (some were on dead code, so i just removed them in applying
	the patch); and C89 doesn't allow for non-static member
	initialization (the FOO_TYPE_BAR macros usually evalulate to
	function calls, so we have to do the param_types arrays the hard
	and ugly way.)

2004/06/02 13:41 (-0400) muppetman

	Unstable development release 1.050

	* NEWS: updated.

2004/06/02 13:41 (-0400) muppetman

	* GParamSpec.xs: cast to hush compiler warning.

2004/06/01 11:44 (-0400) muppetman

	* GParamSpec.xs: remove stray debugging print

2004/06/01 11:18 (-0400) muppetman

	Greatly expanded GParamSpec support.

	* GParamSpec.xs: use attached-magic wrapper hashes and a GType
	registry for GParamSpecs.  Previous releases used blessed scalars
	for Glib::ParamSpec and a list of simple hashes from
	Glib::Object::list_properties; but they really should've been the
	same object.  this code puts the keys from the old simple hashes into