@@ -1,3 +1,7 @@
+2004/06/28 00:40 (-0400) muppetman
+
+	* GType.xs: document the new property stuff.
+
 2004/06/28 00:27 (-0400) muppetman
 
 	* GValue.xs: handle undef gracefully in gperl_value_from_sv(); let
